License and Readme update

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "license": "MIT",
+  "author": "Coty O'Dea (GitHub: HoozHak)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HoozHak/PalmExitGarage.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
