--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "palmexitgarage-server",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Professional Auto Repair Shop Management System - Backend Server with Database Management",
   "main": "index.js",
   "license": "MIT",
   "author": "Coty O'Dea (GitHub: HoozHak)",
